AUT-2304 Refactor saving client secret