@@ -1,15 +1,19 @@
 package ee.ria.tara.service;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonUnwrapped;
 import com.fasterxml.jackson.core.json.JsonReadFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import ee.ria.tara.configuration.providers.AdminConfigurationProvider;
 import ee.ria.tara.configuration.providers.TaraOidcConfigurationProvider;
 import ee.ria.tara.model.Client;
 import ee.ria.tara.model.ClientContact;
+import ee.ria.tara.model.ClientImportResponse;
 import ee.ria.tara.model.InstitutionMetainfo;
 import ee.ria.tara.model.InstitutionType;
 import ee.ria.tara.model.NameTranslations;
@@ -21,6 +25,9 @@ import ee.ria.tara.repository.model.Institution;
 import ee.ria.tara.service.helper.ClientHelper;
 import ee.ria.tara.service.helper.ClientValidator;
 import ee.ria.tara.service.helper.ScopeFilter;
+import ee.ria.tara.service.model.ClientImportItem;
+import ee.ria.tara.service.model.HydraClient;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -34,7 +41,9 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
+import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
@@ -47,11 +56,13 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import static ee.ria.tara.service.OidcService.getDigest;
 import static ee.ria.tara.service.helper.ClientHelper.convertToHydraClient;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
+// Difficult to maintain code, needs to be reworked or removed.
 public class ImportService {
     private final ClientRepository clientRepository;
     private final InstitutionRepository institutionRepository;
@@ -59,6 +70,8 @@ public class ImportService {
     private final ScopeFilter scopeFilter;
     private final RestTemplate restTemplate;
     private final TaraOidcConfigurationProvider taraOidcConfigurationProvider;
+    private final PlatformTransactionManager transactionManager;
+    private final AdminConfigurationProvider adminConfigurationProvider;
 
     private final static ObjectMapper mapper = JsonMapper.builder()
             .addModule(new JavaTimeModule())
@@ -66,7 +79,7 @@ public class ImportService {
 
     static {
         mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
-        String[] fieldsToSkip = new String[] { "secret" };
+        String[] fieldsToSkip = new String[]{"secret"};
         final SimpleFilterProvider filter = new SimpleFilterProvider();
         filter.addFilter("custom_serializer", SimpleBeanPropertyFilter.serializeAllExcept(fieldsToSkip));
         mapper.setFilters(filter);
@@ -74,21 +87,21 @@ public class ImportService {
     }
 
 
-    private List<String> defaultListOfScopes = List.of("openid", "mid", "idcard", "smartid", "eidas", "eidasonly", "eidas:country:*", "email", "phone");
+    private final List<String> defaultListOfScopes =
+            List.of("openid", "mid", "idcard", "smartid", "eidas", "eidasonly", "eidas:country:*", "email", "phone");
 
-    private DataFormatter formatter = new DataFormatter();
+    private final DataFormatter formatter = new DataFormatter();
 
-    private ObjectMapper objectMapper = new ObjectMapper();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
-    public Map<ee.ria.tara.model.Institution, List<Client>> importFromExcelFile(InputStream inputStream) throws Exception {
+    public ClientImportResponse importFromExcelFile(InputStream inputStream) throws Exception {
 
         Workbook workbook = new XSSFWorkbook(inputStream);
 
         Sheet sheet = workbook.getSheetAt(0);
         Iterator<Row> iterator = sheet.iterator();
         assertValidHeader(iterator.next());
-        Map<ee.ria.tara.model.Institution, List<Client>> clients = new LinkedHashMap<>();
-        int i = 0;
+        Map<ee.ria.tara.model.Institution, List<ClientImportItem>> clientRows = new LinkedHashMap<>();
 
         while (iterator.hasNext()) {
             Row row = iterator.next();
@@ -109,8 +122,8 @@ public class ImportService {
 
             client.setInstitutionMetainfo(institutionMetainfo);
             client.setClientId(getCellValue(row, 2));
-            client.setRedirectUris(Arrays.asList(getCellValue(row, 3)));
-            client.setSecret(getCellValue(row, 4));
+            client.setRedirectUris(List.of(getCellValue(row, 3)));
+            String secret = getCellValue(row, 4);
             client.setClientUrl(getNullIfEmpty(getCellValue(row, 5)));
 
             NameTranslations clientName = new NameTranslations();
@@ -128,23 +141,52 @@ public class ImportService {
             client.setClientContacts(getContacts(row, getNullIfEmpty(getCellValue(row, 12))));
             client.setEidasRequesterId(getCellValue(row, 13));
             client.setDescription(getNullIfEmpty(getCellValue(row, 14)));
-            client.setTokenRequestAllowedIpAddresses(Arrays.asList(getCellValue(row, 15)));
+            client.setTokenRequestAllowedIpAddresses(List.of(getCellValue(row, 15)));
             String tokenEndpointAuthMethod = getNullIfEmpty(getCellValue(row, 16));
             client.setTokenEndpointAuthMethod(Client.TokenEndpointAuthMethodEnum.fromValue(tokenEndpointAuthMethod));
             client.setScope(defaultListOfScopes);
 
-            if (clients.containsKey(institution))
-                clients.get(institution).add(client);
-            else {
-                List<Client> list = new ArrayList<>();
-                list.add(client);
-                clients.put(institution, list);
-            }
-
-            i++;
+            clientRows.computeIfAbsent(institution, ignore -> new ArrayList<>())
+                    .add(new ClientImportItem(client, secret));
         }
 
-        return clients;
+        return saveClients(clientRows);
+    }
+
+    public ClientImportResponse saveClients(Map<ee.ria.tara.model.Institution, List<ClientImportItem>> institutionClients) {
+        List<String> importFailedClientIds = new ArrayList<>();
+        int clientsTotal = 0;
+        int clientsImportedOk = 0;
+
+        for (ee.ria.tara.model.Institution institution : institutionClients.keySet()) {
+            for (ClientImportItem clientImportItem : institutionClients.get(institution)) {
+                Client client = clientImportItem.client();
+                Assert.notNull(client.getInstitutionMetainfo(), "Missing institutionMetaInfo");
+                Assert.notNull(client.getInstitutionMetainfo().getRegistryCode(), "Missing institutionMetaInfo.registryCode");
+                try {
+                    saveClient(institution, clientImportItem);
+                    clientsImportedOk++;
+                    log.atInfo().setMessage("Client successfully imported")
+                            .addKeyValue("clientId", client.getClientId())
+                            .log();
+                } catch (Exception e) {
+                    importFailedClientIds.add(client.getClientId());
+                    log.atError().setMessage("Failed to import client")
+                            .addKeyValue("clientId", client.getClientId())
+                            .setCause(e)
+                            .log();
+                }
+                clientsTotal++;
+            }
+        }
+
+        ClientImportResponse response = new ClientImportResponse();
+        response.setStatus(importFailedClientIds.isEmpty() ? "FINISHED_SUCCESSFULLY" : "FINISHED_WITH_ERRORS");
+        response.setClientsImportSuccessCount(clientsImportedOk);
+        response.setClientsCount(clientsTotal);
+        response.setClientsImportFailedCount(importFailedClientIds.size());
+        response.setClientsNotImported(importFailedClientIds);
+        return response;
     }
 
     private List<ClientContact> getContacts(Row row, String cellValue) {
@@ -171,72 +213,88 @@ public class ImportService {
             actualColumnValues.add(getCellValue(row, i));
         }
 
-        if (!expectedColumnValues.equals(actualColumnValues))  {
+        if (!expectedColumnValues.equals(actualColumnValues)) {
             log.error(String.format("Invalid header row. Expecting following header columns: %s, but found: %s", expectedColumnValues, actualColumnValues));
             throw new IllegalArgumentException(String.format("Invalid header row. Expecting following header columns: %s", expectedColumnValues));
         }
     }
 
     @SneakyThrows
-    @Transactional(rollbackFor = Exception.class)
-    public void saveClient(ee.ria.tara.model.Institution institution, Client client) {
+    private void saveClient(ee.ria.tara.model.Institution institution, ClientImportItem clientImportItem) {
+        if (adminConfigurationProvider.isSsoMode()) {
+            throw new UnsupportedOperationException("Client import is not implemented in GovSSO mode.");
+        }
+        Client client = clientImportItem.client();
 
-        log.info("Importing client: " + mapper.writer().writeValueAsString(client));
+        log.info("Importing client: " + mapper.writer().writeValueAsString(clientImportItem));
         String uri = String.format("%s/admin/clients", taraOidcConfigurationProvider.getUrl());
 
         client.setScope(scopeFilter.filterInstitutionClientScopes(client.getScope(), institution.getType().getType()));
         clientValidator.validateClient(client, institution.getType().getType());
 
-        try {
+        TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
 
-            var existingClient = clientRepository.findByClientId(client.getClientId());
-            if (existingClient != null) {
-                log.warn(String.format("Client with client_id: '%s' already exists in database with id: '%s'. Removing", client.getClientId(), existingClient.getId() ));
-                clientRepository.delete(existingClient);
-                clientRepository.flush();
-                log.warn(String.format("Client removed (client_id: '%s', id: '%s')", client.getClientId(), existingClient.getId() ));
+        transactionTemplate.executeWithoutResult(status -> {
+            try {
+                var existingClient = clientRepository.findByClientId(client.getClientId());
+                if (existingClient != null) {
+                    log.warn(String.format("Client with client_id: '%s' already exists in database with id: '%s'. Removing", client.getClientId(), existingClient.getId()));
+                    clientRepository.delete(existingClient);
+                    clientRepository.flush();
+                    log.warn(String.format("Client removed (client_id: '%s', id: '%s')", client.getClientId(), existingClient.getId()));
+                }
+
+                Institution dbInstitution = institutionRepository.findInstitutionByRegistryCode(institution.getRegistryCode());
+                if (dbInstitution == null) {
+                    dbInstitution = new Institution();
+                    dbInstitution.setName(institution.getName());
+                    dbInstitution.setRegistryCode(institution.getRegistryCode());
+                    dbInstitution.setType(InstitutionType.TypeEnum.PUBLIC);
+                    institutionRepository.save(dbInstitution);
+                    institutionRepository.flush();
+                    log.info(String.format("Added new institution. Name: '%s', Code: '%s'", institution.getName(), institution.getRegistryCode()));
+                }
+
+                ee.ria.tara.repository.model.Client clientEntity = ClientHelper.convertToEntity(client, dbInstitution);
+                clientRepository.save(clientEntity);
+                log.info("Client added: " + clientEntity);
+            } catch (Exception e) {
+                throw new IllegalStateException("Something went wrong while saving to admin-service database: " + e.getMessage(), e);
             }
 
-            Institution dbInstitution = institutionRepository.findInstitutionByRegistryCode(institution.getRegistryCode());
-            if (dbInstitution == null) {
-                dbInstitution = new Institution();
-                dbInstitution.setName(institution.getName());
-                dbInstitution.setRegistryCode(institution.getRegistryCode());
-                dbInstitution.setType(InstitutionType.TypeEnum.PUBLIC);
-                institutionRepository.save(dbInstitution);
-                institutionRepository.flush();
-                log.info(String.format("Added new institution. Name: '%s', Code: '%s'", institution.getName(), institution.getRegistryCode()));
-            }
+            HydraClient hydraClient = convertToHydraClient(client, false);
+            HydraClientWithSecret hydraClientWithSecret =
+                    new HydraClientWithSecret(hydraClient, getDigest(clientImportItem.secret()));
 
-            ee.ria.tara.repository.model.Client clientEntity = ClientHelper.convertToEntity(client, dbInstitution);
-            clientRepository.save(clientEntity);
-            log.info("Client added: " + clientEntity);
-        } catch (Exception e) {
-            throw new IllegalStateException("Something went wrong while saving to admin-service database: " + e.getMessage(), e);
-        }
+            try {
+                ResponseEntity<String> response = restTemplate.getForEntity(uri + "/" + client.getClientId(), String.class);
+                if (response.getStatusCode() == HttpStatus.OK) {
+                    log.info(String.format("Client with client_id: '%s' already exists in OIDC service. Updating", client.getClientId()));
+                    restTemplate.exchange(uri + "/" + client.getClientId(), HttpMethod.PUT, new HttpEntity<>(hydraClientWithSecret), Object.class);
+                    log.info(String.format("Client updated", client.getClientId()));
+                } else {
+                    throw new IllegalStateException("Failed to update client in hydra. Unexpected status was returned: " + response.getStatusCode());
+                }
 
-        try {
-            ResponseEntity<String> response = restTemplate.getForEntity(uri + "/" + client.getClientId(), String.class);
-            if (response.getStatusCode() == HttpStatus.OK) {
-                log.info(String.format("Client with client_id: '%s' already exists in OIDC service. Updating", client.getClientId()));
-                restTemplate.exchange(uri + "/" + client.getClientId(), HttpMethod.PUT, new HttpEntity<>(convertToHydraClient(client, false)), Object.class);
-                log.info(String.format("Client updated", client.getClientId()));
-            } else {
-                throw new IllegalStateException("Failed to update client in hydra. Unexpected status was returned: " + response.getStatusCode());
+            } catch (HttpClientErrorException ex) {
+                if (ex.getStatusCode() == HttpStatus.UNAUTHORIZED) {
+                    log.info(String.format("Adding client with client_id: '%s' to OIDC service", client.getClientId()));
+                    restTemplate.exchange(uri, HttpMethod.POST, new HttpEntity<>(hydraClientWithSecret), Object.class);
+                    log.info(String.format("Client added with client_id: '%s'", client.getClientId()));
+                } else {
+                    throw new IllegalStateException("Failed to add client to hydra. Unexpected status was returned: " + ex.getMessage(), ex);
+                }
             }
-
-        } catch (HttpClientErrorException ex) {
-            if (ex.getStatusCode() == HttpStatus.UNAUTHORIZED) {
-                log.info(String.format("Adding client with client_id: '%s' to OIDC service", client.getClientId()));
-                restTemplate.exchange(uri, HttpMethod.POST, new HttpEntity<>(convertToHydraClient(client, false)), Object.class);
-                log.info(String.format("Client added", client.getClientId()));
-            } else {
-                throw new IllegalStateException("Failed to add client to hydra. Unexpected status was returned: " +ex.getMessage(), ex);
-            }
-        }
+        });
     }
 
     private String getCellValue(Row row, int i) {
         return formatter.formatCellValue(row.getCell(i));
     }
+
+    private record HydraClientWithSecret(
+            @NonNull @JsonUnwrapped HydraClient client,
+            @JsonProperty("client_secret") String secret
+    ) {}
+
 }
